2005-11-24  Mathieu Leduc-Hamel <arrak@arrak.org>

	* lib/alexandria/book_providers/renaud.rb:

	Implementing the publish year field.
	
2005-11-18  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade:

	Added some space between the Add/Remove authors buttons in the book
	properties dialog.

	* lib/alexandria/smart_library.rb,
	  lib/alexandria/ui/new_smart_library_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog_base.rb:

	More work on smart libraries.

2005-11-17  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/ui/menus.xml,
	  lib/alexandria.rb,
	  lib/alexandria/smart_library.rb,
	  lib/alexandria/ui.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_smart_library_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog_base.rb:

	Some work on smart libraries (in progress).

2005-11-16  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:

	Support publish year for Proxis.

2005-11-16  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Show tooltips for combo toolbar items ;
	- Filter the books views directly when the filter entry has been modified, 
	  not upon validation.

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/import_library.rb,
	  lib/alexandria/utils.rb,
	  lib/alexandria/book_providers/amadeus.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/bn.rb,
	  lib/alexandria/book_providers/ibs_it.rb,
	  lib/alexandria/book_providers/mcu.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/book_providers/renaud.rb,
	  lib/alexandria/book_providers/z3950.rb,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb,
	  lib/alexandria/ui/preferences_dialog.rb,
	  schemas/alexandria.schemas:
